# EQ-SQL

./: .flake8  .gitignore  README.adoc  README.md  eric_notes.txt
EQ.SQL/: DESCRIPTION  NAMESPACE  README.adoc  build.sh  deps.R  deps.sh
EQ.SQL/R/: eq.R
EQ.SQL/man/: ResultStatus.Rd  SQL_insert.Rd  SQL_update.Rd  eq_init.Rd  eq_pop_in_queue.Rd  eq_pop_out_queue.Rd  eq_push_out_queue.Rd  eq_query_result.Rd  eq_query_task.Rd  eq_report_task.Rd  eq_stop_worker_pool.Rd  eq_submit_task.Rd  insert_task.Rd  next_task_id.Rd  queue_pop.Rd  (+3 more)
R/: .gitignore
db/: .flake8  .gitignore  README.adoc  bebop_db_readme.md  db-clean-queues.sh  db-clear.sh  db-connect.sh  db-create.sh  db-destroy.sh  db-drop-all.sh  db-exp-init.sh  db-ping.sh  db-pretty-imabc.py  db-pretty-imabc.sh  db-print.sql  db-reset.sh  db-settings.sh  db-start.sh  db-stats-exp.py  db-stats-exp.sh  db-tunnel.sh  db_covid.py  db_tools.py  env-bebop.sh  env-theta.sh  nc-listen.sh  nc-send.sh  sample_pg_hba.conf  sample_postgresql.conf  workflow.sql
db_conn_tests/: append_table.R  bebop.cfg  bebop_run_r_test.sh  create_table.R  general_use_db_notes.md  py_conn_test.py
jenkins/: install.sh  test.sh
python/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  algorithm.py  eq.py  proxies.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
python/docs/: README.md  build.sh
python/docs/source/: conf.py
python/eqsql/: cfg.py  db_tools.py  eq.py  proxies.py  worker_pool.py  workflow.sql
python/eqsql/task_queues/: __init__.py  common.py  core.py  emews_service.py  gc_queue.py  gcx_queue.py  local.py  local_queue.py  protocols.py  remote.py  remote_funcs.py  service.py  service_queue.py
python/test/: common.py  test_eq.py  test_gc_queue.py  test_gc_task_queue.py  test_gcx_queue.py  test_pools.py  test_service_queue.py  utils.py
python/test_data/: cfg_ex.yaml  test_local_swift_submit.sh  test_swift_submit.sh
swift/: EQ.swift  loop.swift  loopj-type.swift  loopj.swift  proxy_pool.swift  settings.json
templates/: README.adoc
test/: README.adoc  check-queues.py  check-queues.sh  pools-1.sh  pop.sh  py-test-1-wf.py  taskj.py  test-R-1-me.R  test-R-1-wf.R  test-R-1.sh  test-R-2-me.R  test-R-2-wf.R  test-R-3-me.R  test-R-3-wf.R  test-pools-1-me.R  test-proxy-me.py  test-py-1-me.py  test-py-1-wf.py  test-py-1.sh  test-py-2-me.py  test-py-2-wf.py  test-py-2.sh  test-py-3-me.py  test-py-3-wf.py  test-py-3.sh  test-swift-1.sh  test-swift-2-me.R  test-swift-2-me.py  test-swift-2.sh  test-swift-3-me.R  test-swift-3.sh  test-swift-4-me.R  test-swift-4.sh  test-swift-R-2.sh  test-swift-py-2.sh  test_proxy_wf.py
(+94 files in other folders)
