[flake8]
ignore = E501

[metadata]
name = eqsql
version = attr: eqsql.__version__
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick Collier
author_email = ncollier@anl.gov
maintainer = Nick Collier
maintainer_email = ncollier@anl.gov
url = https://github.com/emews/EQ-SQL
project_urls =
    Bug Tracker = https://github.com/emews/EQ-SQL/issues
    Documentation = https://github.com/emews/EQ-SQL#readme
    Git Repository = https://github.com/emews/EQ-SQL
description = The eqsql package provies an API for HPC workflows to submit, run, and retrieve tasks (such as simulation model runs) using queues implemented in a database.


[options]
packages = find:
python_requires = >=3.8

include_package_data = True

install_requires =
    dill
    proxystore
    psij_python
    psutil
    psycopg2_binary
    globus-compute-sdk
    pyyaml

# [options.entry_oints]
# console_scripts =
#     emewscreator=emewscreator.cli:cli
